--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,66 +7,33 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  cached_network_image: ^3.4.1
+  cupertino_icons: ^1.0.8
+  firebase_auth: ^5.6.2
+  firebase_core: ^3.15.1
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  go_router: ^16.0.0
-  firebase_core: ^3.15.1
-  provider: ^6.1.5
-  firebase_auth: ^5.6.2
-  google_sign_in: ^6.3.0
-  google_fonts: ^6.2.1
-  flutter_svg: ^2.2.0
   flutter_gen: ^5.11.0
-  cached_network_image: ^3.4.1
+  flutter_svg: ^2.2.0
+  go_router: ^16.0.0
+  google_fonts: ^6.2.1
+  google_sign_in: ^6.3.0
+  just_the_tooltip: ^0.0.12
+  provider: ^6.1.5
 
 dev_dependencies:
+  build_runner: ^2.6.0
+  flutter_gen_runner: ^5.11.0
+
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+flutter_gen:
+  output: lib/generated
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  assets:
+    - assets/icons/
+    - assets/images/
