--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  any_link_preview: ^3.0.3
   cached_network_image: ^3.4.1
+  cloud_firestore: ^5.6.11
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.6.2
   firebase_core: ^3.15.1
@@ -19,7 +21,10 @@ dependencies:
   google_fonts: ^6.2.1
   google_sign_in: ^6.3.0
   just_the_tooltip: ^0.0.12
+  lottie: ^3.3.1
   provider: ^6.1.5
+  shared_preferences: ^2.5.3
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   build_runner: ^2.6.0
@@ -37,3 +42,4 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/lottie/
